tests/core/data/csl/InterfaceTypeTests/InvalidDeclarations/invalidInterfaceWithExceptionAsParameter.csl
/*
	Invalid interface to verifiy that exceptions cannot be passed as parameters in methods
 */
interface invalidInterfaceWithExceptionAsParameter
{
	void beta( in TestExceptions.AnotherException ex );
};


